readme-Datei upgedated

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-Hier entsteht eine Plattform zum Hochladen von PTs, Studien- und Bachelorarbeiten.
+Hier entsteht eine Plattform zum Hochladen von Praxistransferberichten, Studien- und Bachelorarbeiten.
